syntax = "proto2";

import "ydb/core/protos/flat_scheme_op.proto";

package NCloud.NBlockStore.NStorage.NSSProxy.NProto;

////////////////////////////////////////////////////////////////////////////////

message TPathDescriptionCache
{
    // Mapping from path.
    map<string, NKikimrSchemeOp.TPathDescription> Data = 1;
}
